// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Interfaces/> Snapshot after interface moving. 1`] = `
<div>
  <h1>
    Network Interfaces
  </h1>
  <p>
    
Here you can configure the settings of the network interfaces on your device. You can switch the physical
network interfaces among networks. If you are unsure what to set here use the default settings.
        
  </p>
  <div
    class="col-sm-12 offset-lg-1 col-lg-10 p-0 mb-3"
  >
    <form>
      <h2>
        WAN
      </h2>
      <p>
        
It acts as an external network connection. Firewall rules should be applied here. It can only contain a
single interface.
        
      </p>
      <div
        class="network mb-3"
      >
        <div
          class="scrollable"
        >
          <button
            class="interface "
            type="button"
          >
            <div>
              <span
                class="fa-stack fa-2x"
              >
                <i
                  class="far fa-square fa-stack-2x"
                />
                <i
                  class="fas fa-ethernet fa-stack-1x"
                />
              </span>
            </div>
            <h5>
              WAN
            </h5>
          </button>
        </div>
      </div>
      <h2>
        LAN
      </h2>
      <p>
        
It acts as a local network connection. LAN should contain devices which are under your control and you
trust them. These devices can see each other and can access this web interface. It is recommended that the
LAN should contain at least one interface otherwise you might not be able to configure this device in an
easy way.
        
      </p>
      <div
        class="network mb-3"
      >
        <div
          class="scrollable"
        >
          <button
            class="interface "
            type="button"
          >
            <div>
              <span
                class="fa-stack fa-2x"
              >
                <i
                  class="far fa-square fa-stack-2x"
                />
                <i
                  class="fas fa-ethernet fa-stack-1x"
                  style="color: lightgrey;"
                />
              </span>
            </div>
            <h5>
              LAN3
            </h5>
          </button>
          <button
            class="interface interface-selected"
            type="button"
          >
            <div>
              <span
                class="fa-stack fa-2x"
              >
                <i
                  class="far fa-square fa-stack-2x"
                />
                <i
                  class="fas fa-ethernet fa-stack-1x"
                  style="color: lightgrey;"
                />
              </span>
            </div>
            <h5>
              LAN1
            </h5>
          </button>
        </div>
      </div>
      <h2>
        Guest Network
      </h2>
      <p>
        
It acts as a local network connection. Unlike LAN the devices in the guest network can't access
the configuration interface of this device and are only able to access WAN (internet). This network should
be used for devices which you don't fully trust. Note that you can also limit download/upload speed of the
devices connected to the guest network.
        
      </p>
      <div
        class="network mb-3"
      >
        <div
          class="scrollable"
        >
          <button
            class="interface "
            type="button"
          >
            <div>
              <span
                class="fa-stack fa-2x"
              >
                <i
                  class="far fa-square fa-stack-2x"
                />
                <i
                  class="fas fa-ethernet fa-stack-1x"
                  style="color: lightgrey;"
                />
              </span>
            </div>
            <h5>
              LAN4
            </h5>
          </button>
        </div>
      </div>
      <h2>
        Unassigned
      </h2>
      <div
        class="network mb-3"
      >
        <div
          class="scrollable"
        >
          <button
            class="interface "
            type="button"
          >
            <div>
              <span
                class="fa-stack fa-2x"
              >
                <i
                  class="far fa-square fa-stack-2x"
                />
                <i
                  class="fas fa-ethernet fa-stack-1x"
                  style="color: lightgrey;"
                />
              </span>
            </div>
            <h5>
              LAN0
            </h5>
          </button>
          <button
            class="interface "
            type="button"
          >
            <div>
              <span
                class="fa-stack fa-2x"
              >
                <i
                  class="far fa-square fa-stack-2x"
                />
                <i
                  class="fas fa-ethernet fa-stack-1x"
                  style="color: lightgrey;"
                />
              </span>
            </div>
            <h5>
              LAN2
            </h5>
          </button>
          <button
            class="interface "
            type="button"
          >
            <div
              style="color: gray;"
            >
              <span
                class="fa-stack fa-2x"
              >
                <i
                  class="fas fa-wifi fa-stack-1x"
                />
                <i
                  class="fas fa-slash fa-stack-1x fa-inverse"
                />
                <i
                  class="fas fa-slash fa-stack-1x"
                  style="bottom: 0.3rem;"
                />
              </span>
            </div>
            <h5>
              1
            </h5>
          </button>
        </div>
      </div>
      <h3>
        Interface %s %s
      </h3>
      <div
        class="form-group"
      >
        <label
          for="1"
        >
          Network
        </label>
        <select
          class="custom-select"
          id="1"
        >
          <option
            value="lan"
          >
            LAN
          </option>
          <option
            value="guest"
          >
            Guest Network
          </option>
          <option
            value="none"
          >
            Unassigned
          </option>
        </select>
      </div>
      <table
        class="table table-hover"
      >
        <tbody>
          <tr>
            <th>
              State
            </th>
            <td>
              <span>
                <i
                  class="fa fa-lg fa-times-circle text-danger"
                  title="down"
                />
              </span>
            </td>
          </tr>
          <tr>
            <th>
              Module ID
            </th>
            <td>
              0
            </td>
          </tr>
          <tr>
            <th>
              Slot
            </th>
            <td>
              LAN1
            </td>
          </tr>
          <tr>
            <th>
              Interface ID
            </th>
            <td>
              lan1
            </td>
          </tr>
          <tr>
            <th>
              Type
            </th>
            <td>
              eth
            </td>
          </tr>
          <tr>
            <th>
              Bus
            </th>
            <td>
              eth
            </td>
          </tr>
          <tr>
            <th>
              Link speed
            </th>
            <td>
              N/A
            </td>
          </tr>
        </tbody>
      </table>
      <div
        class="text-right"
      >
        <button
          class="btn btn-primary  col-sm-12 col-lg-3"
          type="submit"
        >
           
           
          Save
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Interfaces/> Snapshot select interface. 1`] = `
<div>
  <h1>
    Network Interfaces
  </h1>
  <p>
    
Here you can configure the settings of the network interfaces on your device. You can switch the physical
network interfaces among networks. If you are unsure what to set here use the default settings.
        
  </p>
  <div
    class="col-sm-12 offset-lg-1 col-lg-10 p-0 mb-3"
  >
    <form>
      <h2>
        WAN
      </h2>
      <p>
        
It acts as an external network connection. Firewall rules should be applied here. It can only contain a
single interface.
        
      </p>
      <div
        class="network mb-3"
      >
        <div
          class="scrollable"
        >
          <button
            class="interface "
            type="button"
          >
            <div>
              <span
                class="fa-stack fa-2x"
              >
                <i
                  class="far fa-square fa-stack-2x"
                />
                <i
                  class="fas fa-ethernet fa-stack-1x"
                />
              </span>
            </div>
            <h5>
              WAN
            </h5>
          </button>
        </div>
      </div>
      <h2>
        LAN
      </h2>
      <p>
        
It acts as a local network connection. LAN should contain devices which are under your control and you
trust them. These devices can see each other and can access this web interface. It is recommended that the
LAN should contain at least one interface otherwise you might not be able to configure this device in an
easy way.
        
      </p>
      <div
        class="network mb-3"
      >
        <div
          class="scrollable"
        >
          <button
            class="interface "
            type="button"
          >
            <div>
              <span
                class="fa-stack fa-2x"
              >
                <i
                  class="far fa-square fa-stack-2x"
                />
                <i
                  class="fas fa-ethernet fa-stack-1x"
                  style="color: lightgrey;"
                />
              </span>
            </div>
            <h5>
              LAN3
            </h5>
          </button>
        </div>
      </div>
      <h2>
        Guest Network
      </h2>
      <p>
        
It acts as a local network connection. Unlike LAN the devices in the guest network can't access
the configuration interface of this device and are only able to access WAN (internet). This network should
be used for devices which you don't fully trust. Note that you can also limit download/upload speed of the
devices connected to the guest network.
        
      </p>
      <div
        class="network mb-3"
      >
        <div
          class="scrollable"
        >
          <button
            class="interface interface-selected"
            type="button"
          >
            <div>
              <span
                class="fa-stack fa-2x"
              >
                <i
                  class="far fa-square fa-stack-2x"
                />
                <i
                  class="fas fa-ethernet fa-stack-1x"
                  style="color: lightgrey;"
                />
              </span>
            </div>
            <h5>
              LAN1
            </h5>
          </button>
          <button
            class="interface "
            type="button"
          >
            <div>
              <span
                class="fa-stack fa-2x"
              >
                <i
                  class="far fa-square fa-stack-2x"
                />
                <i
                  class="fas fa-ethernet fa-stack-1x"
                  style="color: lightgrey;"
                />
              </span>
            </div>
            <h5>
              LAN4
            </h5>
          </button>
        </div>
      </div>
      <h2>
        Unassigned
      </h2>
      <div
        class="network mb-3"
      >
        <div
          class="scrollable"
        >
          <button
            class="interface "
            type="button"
          >
            <div>
              <span
                class="fa-stack fa-2x"
              >
                <i
                  class="far fa-square fa-stack-2x"
                />
                <i
                  class="fas fa-ethernet fa-stack-1x"
                  style="color: lightgrey;"
                />
              </span>
            </div>
            <h5>
              LAN0
            </h5>
          </button>
          <button
            class="interface "
            type="button"
          >
            <div>
              <span
                class="fa-stack fa-2x"
              >
                <i
                  class="far fa-square fa-stack-2x"
                />
                <i
                  class="fas fa-ethernet fa-stack-1x"
                  style="color: lightgrey;"
                />
              </span>
            </div>
            <h5>
              LAN2
            </h5>
          </button>
          <button
            class="interface "
            type="button"
          >
            <div
              style="color: gray;"
            >
              <span
                class="fa-stack fa-2x"
              >
                <i
                  class="fas fa-wifi fa-stack-1x"
                />
                <i
                  class="fas fa-slash fa-stack-1x fa-inverse"
                />
                <i
                  class="fas fa-slash fa-stack-1x"
                  style="bottom: 0.3rem;"
                />
              </span>
            </div>
            <h5>
              1
            </h5>
          </button>
        </div>
      </div>
      <h3>
        Interface %s %s
      </h3>
      <div
        class="form-group"
      >
        <label
          for="1"
        >
          Network
        </label>
        <select
          class="custom-select"
          id="1"
        >
          <option
            value="lan"
          >
            LAN
          </option>
          <option
            value="guest"
          >
            Guest Network
          </option>
          <option
            value="none"
          >
            Unassigned
          </option>
        </select>
      </div>
      <table
        class="table table-hover"
      >
        <tbody>
          <tr>
            <th>
              State
            </th>
            <td>
              <span>
                <i
                  class="fa fa-lg fa-times-circle text-danger"
                  title="down"
                />
              </span>
            </td>
          </tr>
          <tr>
            <th>
              Module ID
            </th>
            <td>
              0
            </td>
          </tr>
          <tr>
            <th>
              Slot
            </th>
            <td>
              LAN1
            </td>
          </tr>
          <tr>
            <th>
              Interface ID
            </th>
            <td>
              lan1
            </td>
          </tr>
          <tr>
            <th>
              Type
            </th>
            <td>
              eth
            </td>
          </tr>
          <tr>
            <th>
              Bus
            </th>
            <td>
              eth
            </td>
          </tr>
          <tr>
            <th>
              Link speed
            </th>
            <td>
              N/A
            </td>
          </tr>
        </tbody>
      </table>
      <div
        class="text-right"
      >
        <button
          class="btn btn-primary  col-sm-12 col-lg-3"
          type="submit"
        >
           
           
          Save
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Interfaces/> Snapshot. 1`] = `
<div>
  <h1>
    Network Interfaces
  </h1>
  <p>
    
Here you can configure the settings of the network interfaces on your device. You can switch the physical
network interfaces among networks. If you are unsure what to set here use the default settings.
        
  </p>
  <div
    class="col-sm-12 offset-lg-1 col-lg-10 p-0 mb-3"
  >
    <form>
      <h2>
        WAN
      </h2>
      <p>
        
It acts as an external network connection. Firewall rules should be applied here. It can only contain a
single interface.
        
      </p>
      <div
        class="network mb-3"
      >
        <div
          class="scrollable"
        >
          <button
            class="interface "
            type="button"
          >
            <div>
              <span
                class="fa-stack fa-2x"
              >
                <i
                  class="far fa-square fa-stack-2x"
                />
                <i
                  class="fas fa-ethernet fa-stack-1x"
                />
              </span>
            </div>
            <h5>
              WAN
            </h5>
          </button>
        </div>
      </div>
      <h2>
        LAN
      </h2>
      <p>
        
It acts as a local network connection. LAN should contain devices which are under your control and you
trust them. These devices can see each other and can access this web interface. It is recommended that the
LAN should contain at least one interface otherwise you might not be able to configure this device in an
easy way.
        
      </p>
      <div
        class="network mb-3"
      >
        <div
          class="scrollable"
        >
          <button
            class="interface "
            type="button"
          >
            <div>
              <span
                class="fa-stack fa-2x"
              >
                <i
                  class="far fa-square fa-stack-2x"
                />
                <i
                  class="fas fa-ethernet fa-stack-1x"
                  style="color: lightgrey;"
                />
              </span>
            </div>
            <h5>
              LAN3
            </h5>
          </button>
        </div>
      </div>
      <h2>
        Guest Network
      </h2>
      <p>
        
It acts as a local network connection. Unlike LAN the devices in the guest network can't access
the configuration interface of this device and are only able to access WAN (internet). This network should
be used for devices which you don't fully trust. Note that you can also limit download/upload speed of the
devices connected to the guest network.
        
      </p>
      <div
        class="network mb-3"
      >
        <div
          class="scrollable"
        >
          <button
            class="interface "
            type="button"
          >
            <div>
              <span
                class="fa-stack fa-2x"
              >
                <i
                  class="far fa-square fa-stack-2x"
                />
                <i
                  class="fas fa-ethernet fa-stack-1x"
                  style="color: lightgrey;"
                />
              </span>
            </div>
            <h5>
              LAN1
            </h5>
          </button>
          <button
            class="interface "
            type="button"
          >
            <div>
              <span
                class="fa-stack fa-2x"
              >
                <i
                  class="far fa-square fa-stack-2x"
                />
                <i
                  class="fas fa-ethernet fa-stack-1x"
                  style="color: lightgrey;"
                />
              </span>
            </div>
            <h5>
              LAN4
            </h5>
          </button>
        </div>
      </div>
      <h2>
        Unassigned
      </h2>
      <div
        class="network mb-3"
      >
        <div
          class="scrollable"
        >
          <button
            class="interface "
            type="button"
          >
            <div>
              <span
                class="fa-stack fa-2x"
              >
                <i
                  class="far fa-square fa-stack-2x"
                />
                <i
                  class="fas fa-ethernet fa-stack-1x"
                  style="color: lightgrey;"
                />
              </span>
            </div>
            <h5>
              LAN0
            </h5>
          </button>
          <button
            class="interface "
            type="button"
          >
            <div>
              <span
                class="fa-stack fa-2x"
              >
                <i
                  class="far fa-square fa-stack-2x"
                />
                <i
                  class="fas fa-ethernet fa-stack-1x"
                  style="color: lightgrey;"
                />
              </span>
            </div>
            <h5>
              LAN2
            </h5>
          </button>
          <button
            class="interface "
            type="button"
          >
            <div
              style="color: gray;"
            >
              <span
                class="fa-stack fa-2x"
              >
                <i
                  class="fas fa-wifi fa-stack-1x"
                />
                <i
                  class="fas fa-slash fa-stack-1x fa-inverse"
                />
                <i
                  class="fas fa-slash fa-stack-1x"
                  style="bottom: 0.3rem;"
                />
              </span>
            </div>
            <h5>
              1
            </h5>
          </button>
        </div>
      </div>
      <div
        class="text-right"
      >
        <button
          class="btn btn-primary  col-sm-12 col-lg-3"
          type="submit"
        >
           
           
          Save
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Interfaces/> with various modules Snapshot select interface. 1`] = `
<div>
  <h1>
    Network Interfaces
  </h1>
  <p>
    
Here you can configure the settings of the network interfaces on your device. You can switch the physical
network interfaces among networks. If you are unsure what to set here use the default settings.
        
  </p>
  <div
    class="col-sm-12 offset-lg-1 col-lg-10 p-0 mb-3"
  >
    <form>
      <h2>
        WAN
      </h2>
      <p>
        
It acts as an external network connection. Firewall rules should be applied here. It can only contain a
single interface.
        
      </p>
      <div
        class="network mb-3"
      >
        <div
          class="scrollable"
        >
          <button
            class="interface "
            type="button"
          >
            <div>
              <span
                class="fa-stack fa-2x"
              >
                <i
                  class="far fa-square fa-stack-2x"
                />
                <i
                  class="fas fa-ethernet fa-stack-1x"
                />
              </span>
            </div>
            <h5>
              WAN
            </h5>
          </button>
        </div>
      </div>
      <h2>
        LAN
      </h2>
      <p>
        
It acts as a local network connection. LAN should contain devices which are under your control and you
trust them. These devices can see each other and can access this web interface. It is recommended that the
LAN should contain at least one interface otherwise you might not be able to configure this device in an
easy way.
        
      </p>
      <div
        class="network mb-3"
      >
        <div>
          <h4>
            Base module
          </h4>
          <div
            class="scrollable"
          >
            <button
              class="interface "
              type="button"
            >
              <div>
                <span
                  class="fa-stack fa-2x"
                >
                  <i
                    class="far fa-square fa-stack-2x"
                  />
                  <i
                    class="fas fa-ethernet fa-stack-1x"
                    style="color: lightgrey;"
                  />
                </span>
              </div>
              <h5>
                2
              </h5>
            </button>
          </div>
        </div>
        <div>
          <h4>
            Module %s
          </h4>
          <div
            class="scrollable"
          >
            <button
              class="interface "
              type="button"
            >
              <div>
                <span
                  class="fa-stack fa-2x"
                >
                  <i
                    class="far fa-square fa-stack-2x"
                  />
                  <i
                    class="fas fa-ethernet fa-stack-1x"
                    style="color: lightgrey;"
                  />
                </span>
              </div>
              <h5>
                2
              </h5>
            </button>
          </div>
        </div>
      </div>
      <h2>
        Guest Network
      </h2>
      <p>
        
It acts as a local network connection. Unlike LAN the devices in the guest network can't access
the configuration interface of this device and are only able to access WAN (internet). This network should
be used for devices which you don't fully trust. Note that you can also limit download/upload speed of the
devices connected to the guest network.
        
      </p>
      <div
        class="network mb-3"
      >
        <div>
          <h4>
            Base module
          </h4>
          <div
            class="scrollable"
          >
            <button
              class="interface "
              type="button"
            >
              <div>
                <span
                  class="fa-stack fa-2x"
                >
                  <i
                    class="far fa-square fa-stack-2x"
                  />
                  <i
                    class="fas fa-ethernet fa-stack-1x"
                    style="color: lightgrey;"
                  />
                </span>
              </div>
              <h5>
                1
              </h5>
            </button>
          </div>
        </div>
        <div>
          <h4>
            Module %s
          </h4>
          <div
            class="scrollable"
          >
            <button
              class="interface interface-selected"
              type="button"
            >
              <div>
                <span
                  class="fa-stack fa-2x"
                >
                  <i
                    class="far fa-square fa-stack-2x"
                  />
                  <i
                    class="fas fa-ethernet fa-stack-1x"
                    style="color: lightgrey;"
                  />
                </span>
              </div>
              <h5>
                1
              </h5>
            </button>
          </div>
        </div>
      </div>
      <h2>
        Unassigned
      </h2>
      <div
        class="network mb-3"
      >
        <div
          class="scrollable"
        >
          <button
            class="interface "
            type="button"
          >
            <div>
              <span
                class="fa-stack fa-2x"
              >
                <i
                  class="far fa-square fa-stack-2x"
                />
                <i
                  class="fas fa-ethernet fa-stack-1x"
                  style="color: lightgrey;"
                />
              </span>
            </div>
            <h5>
              LAN0
            </h5>
          </button>
          <button
            class="interface "
            type="button"
          >
            <div
              style="color: gray;"
            >
              <span
                class="fa-stack fa-2x"
              >
                <i
                  class="fas fa-wifi fa-stack-1x"
                />
                <i
                  class="fas fa-slash fa-stack-1x fa-inverse"
                />
                <i
                  class="fas fa-slash fa-stack-1x"
                  style="bottom: 0.3rem;"
                />
              </span>
            </div>
            <h5>
              1
            </h5>
          </button>
        </div>
      </div>
      <h3>
        Interface %s %s
      </h3>
      <div
        class="form-group"
      >
        <label
          for="1"
        >
          Network
        </label>
        <select
          class="custom-select"
          id="1"
        >
          <option
            value="lan"
          >
            LAN
          </option>
          <option
            value="guest"
          >
            Guest Network
          </option>
          <option
            value="none"
          >
            Unassigned
          </option>
        </select>
      </div>
      <table
        class="table table-hover"
      >
        <tbody>
          <tr>
            <th>
              State
            </th>
            <td>
              <span>
                <i
                  class="fa fa-lg fa-times-circle text-danger"
                  title="down"
                />
              </span>
            </td>
          </tr>
          <tr>
            <th>
              Module ID
            </th>
            <td>
              1
            </td>
          </tr>
          <tr>
            <th>
              Slot
            </th>
            <td>
              1
            </td>
          </tr>
          <tr>
            <th>
              Interface ID
            </th>
            <td>
              lan4
            </td>
          </tr>
          <tr>
            <th>
              Type
            </th>
            <td>
              eth
            </td>
          </tr>
          <tr>
            <th>
              Bus
            </th>
            <td>
              eth
            </td>
          </tr>
          <tr>
            <th>
              Link speed
            </th>
            <td>
              N/A
            </td>
          </tr>
        </tbody>
      </table>
      <div
        class="text-right"
      >
        <button
          class="btn btn-primary  col-sm-12 col-lg-3"
          type="submit"
        >
           
           
          Save
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Interfaces/> with various modules Snapshot. 1`] = `
<div>
  <h1>
    Network Interfaces
  </h1>
  <p>
    
Here you can configure the settings of the network interfaces on your device. You can switch the physical
network interfaces among networks. If you are unsure what to set here use the default settings.
        
  </p>
  <div
    class="col-sm-12 offset-lg-1 col-lg-10 p-0 mb-3"
  >
    <form>
      <h2>
        WAN
      </h2>
      <p>
        
It acts as an external network connection. Firewall rules should be applied here. It can only contain a
single interface.
        
      </p>
      <div
        class="network mb-3"
      >
        <div
          class="scrollable"
        >
          <button
            class="interface "
            type="button"
          >
            <div>
              <span
                class="fa-stack fa-2x"
              >
                <i
                  class="far fa-square fa-stack-2x"
                />
                <i
                  class="fas fa-ethernet fa-stack-1x"
                />
              </span>
            </div>
            <h5>
              WAN
            </h5>
          </button>
        </div>
      </div>
      <h2>
        LAN
      </h2>
      <p>
        
It acts as a local network connection. LAN should contain devices which are under your control and you
trust them. These devices can see each other and can access this web interface. It is recommended that the
LAN should contain at least one interface otherwise you might not be able to configure this device in an
easy way.
        
      </p>
      <div
        class="network mb-3"
      >
        <div>
          <h4>
            Base module
          </h4>
          <div
            class="scrollable"
          >
            <button
              class="interface "
              type="button"
            >
              <div>
                <span
                  class="fa-stack fa-2x"
                >
                  <i
                    class="far fa-square fa-stack-2x"
                  />
                  <i
                    class="fas fa-ethernet fa-stack-1x"
                    style="color: lightgrey;"
                  />
                </span>
              </div>
              <h5>
                2
              </h5>
            </button>
          </div>
        </div>
        <div>
          <h4>
            Module %s
          </h4>
          <div
            class="scrollable"
          >
            <button
              class="interface "
              type="button"
            >
              <div>
                <span
                  class="fa-stack fa-2x"
                >
                  <i
                    class="far fa-square fa-stack-2x"
                  />
                  <i
                    class="fas fa-ethernet fa-stack-1x"
                    style="color: lightgrey;"
                  />
                </span>
              </div>
              <h5>
                2
              </h5>
            </button>
          </div>
        </div>
      </div>
      <h2>
        Guest Network
      </h2>
      <p>
        
It acts as a local network connection. Unlike LAN the devices in the guest network can't access
the configuration interface of this device and are only able to access WAN (internet). This network should
be used for devices which you don't fully trust. Note that you can also limit download/upload speed of the
devices connected to the guest network.
        
      </p>
      <div
        class="network mb-3"
      >
        <div>
          <h4>
            Base module
          </h4>
          <div
            class="scrollable"
          >
            <button
              class="interface "
              type="button"
            >
              <div>
                <span
                  class="fa-stack fa-2x"
                >
                  <i
                    class="far fa-square fa-stack-2x"
                  />
                  <i
                    class="fas fa-ethernet fa-stack-1x"
                    style="color: lightgrey;"
                  />
                </span>
              </div>
              <h5>
                1
              </h5>
            </button>
          </div>
        </div>
        <div>
          <h4>
            Module %s
          </h4>
          <div
            class="scrollable"
          >
            <button
              class="interface "
              type="button"
            >
              <div>
                <span
                  class="fa-stack fa-2x"
                >
                  <i
                    class="far fa-square fa-stack-2x"
                  />
                  <i
                    class="fas fa-ethernet fa-stack-1x"
                    style="color: lightgrey;"
                  />
                </span>
              </div>
              <h5>
                1
              </h5>
            </button>
          </div>
        </div>
      </div>
      <h2>
        Unassigned
      </h2>
      <div
        class="network mb-3"
      >
        <div
          class="scrollable"
        >
          <button
            class="interface "
            type="button"
          >
            <div>
              <span
                class="fa-stack fa-2x"
              >
                <i
                  class="far fa-square fa-stack-2x"
                />
                <i
                  class="fas fa-ethernet fa-stack-1x"
                  style="color: lightgrey;"
                />
              </span>
            </div>
            <h5>
              LAN0
            </h5>
          </button>
          <button
            class="interface "
            type="button"
          >
            <div
              style="color: gray;"
            >
              <span
                class="fa-stack fa-2x"
              >
                <i
                  class="fas fa-wifi fa-stack-1x"
                />
                <i
                  class="fas fa-slash fa-stack-1x fa-inverse"
                />
                <i
                  class="fas fa-slash fa-stack-1x"
                  style="bottom: 0.3rem;"
                />
              </span>
            </div>
            <h5>
              1
            </h5>
          </button>
        </div>
      </div>
      <div
        class="text-right"
      >
        <button
          class="btn btn-primary  col-sm-12 col-lg-3"
          type="submit"
        >
           
           
          Save
        </button>
      </div>
    </form>
  </div>
</div>
`;
